# atlan-requests-test

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  PROJECT_OVERVIEW.md  README.md  deploy-from-ghcr.sh  deploy.sh  example_selective_usage.py  example_usage.py  pyproject.toml  test-podman.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-publish.yml  security.yml  test.yml
app/: __init__.py  main.py
app/config/: settings.py
app/middleware/: s3_logging.py
app/models/: schemas.py
app/services/: data_processor.py  endpoint_matcher.py  s3_client.py
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  secret.yaml  service.yaml  serviceaccount.yaml
tests/: test_endpoint_matcher.py  test_main.py  test_middleware.py  test_s3_client.py
